src/objects/Rate_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <globalPicklist>Account_Tier</globalPicklist>
        <label>Account Tier</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <globalPicklist>Assignment_Type</globalPicklist>
        <label>Assignment Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Rate Cards</relationshipLabel>
        <relationshipName>Rate_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <globalPicklist>Region</globalPicklist>
        <label>Region</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <globalPicklist>Role</globalPicklist>
        <label>Role</label>
        <type>Picklist</type>
    </fields>
    <label>Rate Card</label>
    <nameField>
        <label>Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>